# IPC

./: .gitignore  CMakeLists.txt  main.cpp  main.py
JsonParser/: BaseMsg.cpp  BaseMsg.hpp  Msg1.hpp  Msg2.hpp  Observer.cpp  Observer.hpp  main  main.cpp
MsgBuilder/: messages.json  msgBuilder.py
MsgBuilder/Msgs/: Msg1.hpp  Msg2.hpp
UnixSockets/: Server.cpp  Server.hpp  main.cpp  main.py
